syntax = "proto3";

package flowstate.v1;

import "flowstate/v1/state.proto";
import "flowstate/v1/commands.proto";

message ExecuteRequest {
  flowstate.v1.StateContext state_context = 1;
}

message ExecuteResponse {
  flowstate.v1.StateContext state_context = 1;
  flowstate.v1.Command command = 2;
}

service FlowService {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}
}